<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Título -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Asistir"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <!-- Evento -->
    <TextView
        android:id="@+id/nombre_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Evento nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <!-- Card para Ubicación -->
    <androidx.cardview.widget.CardView
        android:id="@+id/ubicacion_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/nombre_evento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/ubicacion_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/location"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fecha"/>

        <TextView
            android:id="@+id/ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ejemplo_lugar"
            android:gravity="right"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>

    <!-- Card para Fecha -->
    <androidx.cardview.widget.CardView
        android:id="@+id/fecha_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/ubicacion_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/fecha_texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/dates"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fecha"/>

        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ejemplo_date"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="right"
            app:layout_constraintStart_toEndOf="@id/fecha"/>
    </androidx.cardview.widget.CardView>

    <!-- Sección para seleccionar cantidad de invitados -->
    <TextView
        android:id="@+id/texto_invitados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/how_many_guests"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fecha_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Card para seleccionar adultos -->
    <androidx.cardview.widget.CardView
        android:id="@+id/adultos_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/texto_invitados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guests"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/decrement_adults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menos"/>

            <TextView
                android:id="@+id/adults_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="1"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/increment_adults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Botón de Reservar -->
    <Button
        android:id="@+id/boton_reservar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:text="Reservar"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/adultos_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
