<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Imagen del evento -->
        <ImageView
            android:id="@+id/evento_imagen"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/evento1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Nombre del evento -->
            <TextView
                android:id="@+id/evento_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="Nombre del evento"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <!-- Fecha del evento -->
            <TextView
                android:id="@+id/evento_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/ejemplo_date"
                android:gravity="left"
                android:textSize="15sp"
                android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Lugar del evento -->
            <TextView
                android:id="@+id/evento_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/ejemplo_lugar"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <!-- Asistir al evento -->
            <Button
                android:id="@+id/asistir_evento_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/asistir" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
